# wal

./: Cargo.toml  README.md
examples/: bench.rs  temp.rs  wal.rs
src/: lib.rs  mmap.rs  mmap_segment.rs  segment.rs  test_utils.rs
src/io/: mod.rs  segment.rs
src/mmap/: flusher.rs  mod.rs  segment.rs  segment_creator.rs
src/segment/: creator.rs  flusher.rs  mod.rs
tests/: process_crash.rs
