[package]
name = "wal"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "*"
crc = "*"
eventual = "*"
log = "*"
memmap = "*"
rand = "*"

[dev-dependencies]
docopt = "*"
env_logger = "*"
histogram = "*"
quickcheck = "*"
regex = "*"
rustc-serialize = "*"
tempdir = "*"
time = "*"
