[package]
name = "wal"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "*"
crc = "*"
eventual = "*"
fs2 = "*"
log = "*"
memmap = "*"
rand = "*"
time = "*"

[dev-dependencies]
docopt = "*"
env_logger = "*"
histogram = "*"
quickcheck = "*"
quickcheck_macros = "*"
rand = "*"
regex = "*"
rustc-serialize = "*"
tempdir = "*"
time = "*"
