[package]
name = "wal"
version = "0.1.0"
authors = ["Dan Burkert <dan@danburkert.com>"]

[dependencies]
byteorder = "0.4"
crc = "1"
eventual = "0.1.4"
fs2 = "0.2"
log = "0.3"
memmap = "0.2"
rand = "0.3"
time = "0.1"

# Binary dependencies
docopt = "0.6"
env_logger = "0.3"
rustc-serialize = "0.3"

[dev-dependencies]
docopt = "0.6"
env_logger = "0.3"
histogram = "0.3"
quickcheck = "0.2"
regex = "0.1"
rustc-serialize = "0.3"
tempdir = "0.3"
